fix(style.css): Fixed horizontal scrollbar issue
The browser doesn't account for the size of the vertical scrollbar
when using 100vw, which causes a horizontal scrollbar to appear.

Changed 100vw to 98vw to fix this issue on most display sizes.

I think it'll still appear if the screen width is small enough.

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-  width: 100vw;
+  width: 98vw;
   font-size: 3em;
   text-align: center;
 }
